fix overlapping line chart vertical label on large screens w added left margin

--- a/src/static/css/cfpb-chart-builder.less
+++ b/src/static/css/cfpb-chart-builder.less
@@ -462,7 +462,7 @@
       transform: rotate(0deg) translate(120px, -133px) !important;
 
       .respond-to-min( 655px, {
-        transform: rotate(-90deg) translate(-245px, -232px) !important;
+        transform: rotate(-90deg) translate(-255px, -232px) !important;
       } );
 
     }
